--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">javaprojectNojus</string>
+    <string name="search_error_reading_data">Couldnt read data for API</string>
+    <string name="search_loading_data"  >Please wait for data to be displayed</string>
 </resources>
